# c964-movie-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-download-model.sh  jsconfig.json  package-lock.json  package.json  pyproject.toml  vite.config.js
runtime/: Dockerfile  package-lock.json  package.json  vite.config.js
runtime/client/: index.html
runtime/client/src/: index.css  main.jsx  query.js  store.js  utils.js
runtime/client/src/components/: App.jsx  AppLayout.jsx  BinarySwitch.jsx  BrowseSuggestion.jsx  ErrorFallback.jsx  Home.jsx  InfoTooltip.jsx  MLVisuals.jsx  MovieCard.jsx  MovieCardSlim.jsx  MovieGrid.jsx  MoviePoster.jsx  MovieResults.jsx  MovieThumbnail.jsx  MyStuffTab.jsx  PopularTab.jsx  QueryState.jsx  RecommendationsList.jsx  RecommendationsTab.jsx  SearchTab.jsx
runtime/client/src/components/tabs/: MyStuffTab.jsx  PopularTab.jsx  RecommendationsTab.jsx  SearchTab.jsx
runtime/server/: api.py  index.js  main.py  recommend.js  recommend.py  router.py  tmdb.py  transform.js
runtime/server-py/: main.py  recommend.py
runtime/server/model/: movie_ids.json  svd.joblib  tfidf.joblib  vocabulary.json
runtime/server/public/: index.html
runtime/server/public/assets/: index-BWtG5Apy.js  index-CbYpVKco.js  index-D5mPq-ki.css  index-DLYOZTzM.css
tests/: genre_coherence.py
trainer/: dataset-source.txt  download.py  prep_data.py  pyproject.toml  train.py
trainer/scripts/: download.py  prep_data.py  train.py
