[project]
name = "c964-movie-recommender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "numpy>=2.4.6",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.49.0",
    "fastapi>=0.136.3",
]

[dependency-groups]
train = [
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
